# memory-collector

./: .devcontainer.json  .gitignore  404.html  Cargo.toml  Dockerfile.collector  Dockerfile.devcontainer  README.md  go.mod  go.sum  index.html  justfile  mkdocs.yml  run_module.sh  sitemap.xml
.github/actions/aws-runner/: action.yml
.github/workflows/: Prometheus Integration Test.yml  aws-resctrl-checker.yaml  aws-runner-template.yaml  benchmark-ebpf.yml  benchmark-sync-timers.yml  benchmark.yaml  build-collector.yaml  ci-collector.yaml  ci-cpi-count.yaml  ci-prometheus-metrics.yaml  ci.yml  cpi-count--test-ec2.yaml  cpi-count-test.yaml  delete-environment.yaml  demo-debug.yaml  demo.yaml  deploy-k3-environment.yaml  docs-workflow.yml  get-resctrl-and-perf-info.yaml  make-docs-to-gh-pages.yml  prometheus-metrics-test.yml  publish-benchmark-to-gh.yaml  publish-helm-chart.yaml  resctrl-checker--test-ec2.yaml  resctrl-demo.yaml  tag-collector-latest.yaml  test-ebpf-collector.yaml  test-go-packages.yaml  test-helm-chart.yaml  test-kernel-module.yaml  test-nri-integration.yaml
architecture/decisions/2024-12-21-container-notifications/: index.html
architecture/decisions/2025-01-02-aws-test-runners/: index.html
architecture/decisions/2025-02-18-getting-cmt-measurements/: index.html
benchmark/: index.html
benchmarks/: metadata.txt
benchmarks/parquet-data/: head-100.json  head-100.txt  sample-100.json  sample-100.txt  schema-detailed.txt  schema.json  schema.txt
charts/: collector-0.1.0.tgz  collector-0.1.1.tgz  index.yaml
charts/collector/: Chart.yaml  README.md  values.yaml
charts/collector/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  collector.yaml  secret.yaml  serviceaccount.yaml
ci/aws-setup/: index.html
cmd/bpftracer/: main.go  unvariance_bpftracer.bt
cmd/collector/: .gitignore  Dockerfile  collector.c  collector_test.go  event_opener.go  gen.go  go.mod  go.sum  main.go  protocol.bpf.c  protocol.bpf.h  task_counter.c  task_metadata.bpf.c  task_metadata.bpf.h  task_rmid.bpf.c  task_rmid.bpf.h
cmd/cpi-count/: .gitignore  Dockerfile  go.mod  go.sum  goperf.go  main.go  perf.go  perf_test.go
cmd/prometheus_metrics/: Dockerfile  main.go  record_metrics.go
cmd/sync_timer_benchmark/: .gitignore  benchmark.bpf.c  benchmark_sync_timer.sh  main.go
cmt-perf/: index.html
collection/: index.html
crates/bpf/: Cargo.toml  build.rs
crates/bpf/src/: lib.rs  sync_timer.rs
crates/bpf/src/bpf/: cgroup_inode_test.bpf.c  collector.bpf.c  collector.h  sync_timer.bpf.h
crates/bpf/tests/: cgroup_inode_test.rs
crates/collector/: .gitignore  Cargo.toml  README.md
crates/collector/src/: bpf_error_handler.rs  bpf_perf_to_timeslot.rs  bpf_perf_to_trace.rs  bpf_task_tracker.rs  bpf_timeslot_tracker.rs  main.rs  metrics.rs  parquet_writer.rs  parquet_writer_task.rs  perf_event_processor.rs  task_completion_handler.rs  task_metadata.rs  timeslot_data.rs  timeslot_to_recordbatch_task.rs
crates/collector/src/bpf/: collector.bpf.c  collector.h
crates/maps/: Cargo.toml
crates/maps/src/: lib.rs  perf_event.rs  perf_rings.rs
crates/nri/: Cargo.toml  build.rs
crates/nri/src/: events_mask.rs  examples.rs  lib.rs  metadata.rs  multiplex.rs
crates/nri/tests/: README.md  integration_test.rs  nri_plugin_test.rs
crates/perf/: Cargo.toml
crates/perf/src/: lib.rs  memory_ring_storage.rs  mmap_ring_storage.rs  ring.rs  ring_reader.rs
crates/perf_events/: Cargo.toml
crates/perf_events/src/: dispatcher.rs  helpers.rs  lib.rs  map_reader.rs  memory_storage.rs  mmap_storage.rs  reader.rs  ring.rs
crates/perf_ring/: Cargo.toml
crates/perf_ring/src/: lib.rs  map_reader.rs  memory_storage.rs  mmap_storage.rs  perf_event.rs  reader.rs
crates/timeslot/: Cargo.toml
crates/trace-analysis/: Cargo.toml  README.md
crates/trace-analysis/plot/: README.md  hyperthread_cpi_histogram.R
crates/trace-analysis/src/: hyperthread_analysis.rs  main.rs
deploy/opentelemetry-demo/: values.yaml
design/: index.html
devlog/: index.html
docs/: benchmark.md  cmt-perf.md  collection.md  design.md  devlog.md  index.md  noise-generators.md  pipeline-implementation.md  resctrl-guide.md  s3-testing.md
docs/ci/: aws-setup.md
kustomize/: kustomization.yaml
module/: Makefile  README.md  benchmark_sync_timer.sh  benchmark_sync_timer_stress.sh  collector.h  collector_main.c  combine_baselines.py  dkms.conf  memory_collector.c  memory_collector_trace.h  process_benchmark.sh  procfs.c  procfs.h  procfs_test.c  rdt.c  rdt.h  resctrl.c  resctrl.h  rmid_allocator.c  rmid_allocator.h  rmid_allocator_test.c  run_module.sh  sync_timer.c  sync_timer.h  sync_timer_benchmark.c  sync_timer_benchmark.h  sync_timer_test.c  test_module.sh  test_pmu.sh  test_procfs.sh  test_rmid_allocator.sh  test_sync_timer.sh  tracepoints.h  visualize_benchmark.R
noise-generators/: index.html
pipeline-implementation/: index.html
pkg/aggregate/: aggregator.go  aggregator_test.go
pkg/backoff/: .gitignore  README.md  backoff.h  backoff_test.bpf.c  backoff_test.go
pkg/checker/: go.mod  go.sum  main.go
pkg/perf/: README.md  reader.go  reader_test.go  ring.go  ring_test.go  storage.go  storage_test.go
pkg/perf_ebpf/: event_opener.go  reader.go  reader_test.go
pkg/rmid/: rmid.go  rmid_test.go
pkg/rmid_allocator/: .gitignore  README.md  rmid_allocator.bpf.c  rmid_allocator.bpf.h  rmid_allocator_test.bpf.c  rmid_allocator_test.go
pkg/sync_timer/: .gitignore  sync_timer.bpf.c  sync_timer.bpf.h  sync_timer.go
resctrl-guide/: index.html
s3-testing/: index.html
scripts/: .gitignore  README.md  convert_cpu_metrics.sh  extract_window_params.R  plot_contention_analysis.R  plot_cpi_by_llc_misses.R  plot_cpi_vs_scheduling_gap.R  plot_cpu_utilization.R  plot_instructions_vs_cpi.R  plot_llc_misses.R  plot_memory_usage.R  plot_memory_utilization.R  plot_parquet.sh  plot_workload_performance.R  simulation-of-high-res-vs-low-res-measurements.R
scripts/git/: clean-branches.sh  clean-squashed-branches.sh  create-branch.sh  sync-upstream.sh
search/: search_index.json
(+6 files in other folders)
