[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "crates/collector",
    "crates/perf_events",
    "crates/timeslot",
    "crates/bpf",
    "crates/nri",
    "crates/trace-analysis",
]

[workspace.dependencies]
collector = { path = "crates/collector" }
perf_events = { path = "crates/perf_events" }
timeslot = { path = "crates/timeslot" }
bpf = { path = "crates/bpf" }
nri = { path = "crates/nri" }

libbpf-rs = "0.24.8"
plain = "0.2"
thiserror = "1.0"
page_size = "0.5"
libc = "0.2"
perf-event-open-sys = "5.0" 
anyhow = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"]}
clap = { version = "4.5.37", default-features = false, features = ["std", "derive", "help", "usage"] }
arrow-array = "55.0"
arrow-schema = "55.0"
parquet = { version = "55.0", default-features = false, features = ["arrow", "snap", "object_store", "async"] }
object_store = { version = "0.12", features = ["aws", "gcp", "azure"] }
url = "2.5"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1.16", features = ["v4"] }
hostname = "0.4"
futures = "0.3"
chrono = "0.4"
log = "0.4.27"
env_logger = "0.11.8"
protobuf = "3.7.2"
ttrpc = { git = "https://github.com/containerd/ttrpc-rust", rev = "8ac79f1ce81808ff5781cf03a11fb08c29c9ffe1", features = ["async"] }
ttrpc-codegen = "0.5"
protobuf-codegen = "3.7.2"
async-trait = "0.1"
bytes = "1.5"
