[package]
name = "bpf"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[build-dependencies]
libbpf-cargo = "0.24"
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "8f91e9fd5b488ff57074e589e3960940f3387830" }

[dependencies]
anyhow = { workspace = true }
libbpf-rs = { workspace = true }
libc = { workspace = true }
plain = { workspace = true }
nix = { version = "0.27.1", features = ["sched"] }
perf_events = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }