[package]
name = "collector"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[build-dependencies]
libbpf-cargo = "0.24"
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94" }

[dependencies]
anyhow = { workspace = true }
libbpf-rs = { workspace = true }
libc = { workspace = true }
plain = "0.2"
time = { workspace = true }
clap = { workspace = true }
