[package]
name = "collector"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[build-dependencies]
libbpf-cargo = "0.24"
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "8f91e9fd5b488ff57074e589e3960940f3387830" }

[dependencies]
anyhow = { workspace = true }
libbpf-rs = { workspace = true }
libc = { workspace = true }
plain = { workspace = true }
time = { workspace = true }
clap = { workspace = true }
perf_events = { workspace = true }
nix = { version = "0.27.1", features = ["sched"] }
timeslot = { workspace = true }
bpf = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
parquet = { workspace = true }
object_store = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
hostname = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
testing_logger = "0.1"
