[package]
name = "nri"
version = { workspace = true }
edition = { workspace = true }

[features]
examples = []

[dependencies]
protobuf = { workspace = true }
ttrpc = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
bytes = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
ttrpc-codegen = { workspace = true }
protobuf-codegen = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
async-trait = "0.1" 
tokio = { version = "1.3", features = ["net", "sync", "rt-multi-thread", "macros", "io-util", "time", "signal"] }
env_logger = "0.10.0"
kube = { version = "0.99.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
