[package]
name = "perf_events"
version = "0.1.0"
edition = "2021"
description = "eBPF perf ring buffer implementation"
license = "MIT"

[dependencies]
thiserror = { workspace = true }
page_size = { workspace = true }
libbpf-rs = { workspace = true }
plain = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }
perf-event-open-sys = { workspace = true }
