[package]
name = "perf_ring"
version = "0.1.0"
edition = "2021"
description = "eBPF perf ring buffer implementation"
license = "MIT"

[dependencies]
thiserror = "1.0"
page_size = "0.5"
libbpf-rs = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
perf-event-open-sys = "5.0" 